--- a/data/blog/test.mdx
+++ b/data/blog/test.mdx
@@ -1,8 +1,8 @@
 ---
-title: Images in Next.js
-date: '2020-11-11'
-tags: ['next js', 'guide']
-draft: true
+title: Stop coding on your laptop, start using OpenShift Dev Spaces (or equivalent) solutions
+date: '2024-5-13'
+tags: ['openshift', 'dev spaces', 'developer']
+draft: false
 summary: 'In this article we introduce adding images in the tailwind starter blog and the benefits and limitations of the next/image component.'
 authors: ['sparrowhawk']
 ---
