getting ready to draft first blog post

--- a/data/blog/devspaces.mdx
+++ b/data/blog/devspaces.mdx
@@ -1,10 +1,9 @@
 ---
-title: Stop coding on your laptop, start using OpenShift Dev Spaces (or equivalent) solutions
+title: Stop coding on your laptop, start coding from OpenShift Dev Spaces
 date: '2024-5-13'
 tags: ['openshift', 'dev spaces', 'developer']
 draft: false
-summary: 'In this article we introduce adding images in the tailwind starter blog and the benefits and limitations of the next/image component.'
-authors: ['sparrowhawk']
+summary: 'In this article I am explaining why developers should stop developing from their laptop, and leverage containerized IDE to make their life easier and happier'
 ---
 
 # Introduction
