--- a/data/blog/devspaces.mdx
+++ b/data/blog/devspaces.mdx
@@ -3,7 +3,7 @@ title: Stop coding on your laptop, start coding from OpenShift Dev Spaces
 date: '2024-5-13'
 tags: ['openshift', 'dev spaces', 'developer']
 draft: false
-summary: 'In this article I am explaining why developers should stop developing from their laptop, and leverage containerized IDE to make their life easier and happier'
+summary: 'In this article I am explaining why developers should stop developing from their laptop, and leverage project specific containerized IDE to make their life easier and happier'
 ---
 
 WIP
